testsuite/tests/properties/invalid_memoized_trans/test.out
test.py:20: error: Property cannot be memoized (in Example.get_var: Cannot memoize extracting the value of a logic variable, call chain is: Example.get_var)
test.py:36: error: Property cannot be memoized (in Example.get_var2: Cannot memoize extracting the value of a logic variable, call chain is: Example.get_var2_public_wrapper -> Example.get_var2)
test.py:75: error: Property cannot be memoized (in Example.get_something_unmemoizable: get_something_unmemoizable is unmemoizable, call chain is: Example.get_var4_public_wrapper -> Example.get_var4 -> Example.get_something_unmemoizable)
test.py:42: error: Property cannot be memoized (in Example.get_var2: Cannot memoize extracting the value of a logic variable, call chain is: Example.top_wrapper -> Example.get_var2)
Done
